# react-native-chat-sdk

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .yarnrc  CHANGELOG.md  CHANGELOG.zh.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh.md  lefthook.yml  package.json  react-native-chat-sdk.podspec  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
android/: build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt
docs/: .gitignore  developer.md  developer.zh.md  easy.zh.md  fcm.md  others.md  push.zh.md  quick-start.md  quick-start.zh.md  rn_api_overview.md  rn_api_overview.zh.md  user.md  version-types.md  version-types.zh.md  windows.md
docs/typedoc/: index.html  modules.html  typedoc.json
example/: README.md  README.zh.md  app.json  index.js  package.json
example/android/: build.gradle  gradle.properties  settings.gradle
example/ios/: EnableSwift.swift  File.swift  Podfile
example/patches/: react-native-modal-dropdown+1.0.2.patch
example/src/: App.tsx
examples/: README.md
examples/firebase_push_demo/: .gitignore  App.js  README.md  app.json  index.js  (+1 more)
ios/: ChatSdk.h  ChatSdk.m
scripts/: generate-env.js  generate-version.js  mac_publish.sh  mac_publish_references.sh  publish_agora_package.sh  publish_agora_package_1.4.0.sh  typedoc.js
src/: ChatCircleManager.ts  ChatClient.ts  ChatContactManager.ts  ChatEvents.ts  ChatGroupManager.ts  ChatManager.ts  ChatPresenceManager.ts  ChatPushManager.ts  ChatRoomManager.ts  ChatUserInfoManager.ts  index.ts  index.tsx
(+285 files in other folders)
